[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "PyPSF"
version = "0.0.1"
authors = [
  { name="Marcel Meimbresse", email="" },
]
description = "Python implementation of the Pattern Sequence Forecasting (PSF) algorithm"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  "pandas>=1.3",
  "sklearn>=1.0",
  "numpy>=1.21"
]

[project.urls]
"Homepage" = "https://github.com/mamei16/PyPSF"
"Bug Tracker" = "https://github.com/mamei16/PyPSF/issues"